# configParser

./: CMakeLists.txt  README.md
docs/: API.md  README.md
examples/: CMakeLists.txt  alter.cpp  create.cpp  delete.cpp  example.conf  read.cpp
src/: ConfigFile.cpp  ConfigParser.cpp  ConfigParser.hpp  configparser.hpp
tests/: main.cpp  test.conf  test_config_parser.cpp
